--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "7.1.x",
     "browser-sync": "2.18.x",
+    "del": "3.0.0",
     "gulp": "3.9.x",
+    "gulp-csso": "3.0.0",
+    "gulp-image-min": "3.4.0",
     "gulp-plumber": "1.1.x",
     "gulp-postcss": "7.0.x",
+    "gulp-posthtml": "^3.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-svgstore": "6.1.0",
     "gulp-sass": "3.1.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "gulp-webp": "2.3.0",
+    "run-sequence": "2.2.0",
     "stylelint": "8.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -36,5 +44,8 @@
   ],
   "engines": {
     "node": "8.2"
+  },
+  "dependencies": {
+    "del": "^3.0.0"
   }
 }
