--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "del": "3.0.0",
     "gulp": "3.9.x",
     "gulp-csso": "3.0.0",
-    "gulp-image-min": "3.4.0",
+    "gulp-imagemin": "3.4.0",
     "gulp-plumber": "1.1.x",
     "gulp-postcss": "7.0.x",
     "gulp-posthtml": "^3.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-svgstore": "6.1.0",
     "gulp-sass": "3.1.x",
+    "gulp-svgstore": "6.1.0",
     "gulp-webp": "2.3.0",
+    "posthtml-include": "^1.1.0",
     "run-sequence": "2.2.0",
     "stylelint": "8.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
